packages/hooks-test/tests/snapshots/generic_args__use_tuple_0.snap
---
source: packages/hooks-test/tests/generic_args.rs
expression: "use_tuple_0::hook_impl_code()"
---
fn use_tuple_0<'a>(
    _: &'a (),
) -> impl ::hooks::core::UpdateHookUninitialized<
    Uninitialized = impl ::hooks::core::HookPollNextUpdate + ::hooks::core::HookUnmount + ::core::default::Default + ::hooks::core::Captures<
        &'a (),
    >,
    Hook = impl ::hooks::core::Hook + for<'hook> ::hooks::core::HookValue<
        'hook,
        Value = (),
    > + ::hooks::core::Captures<&'a ()>,
> {
    enum __HooksImplNever {}
    struct __HooksValueOfThisHook<'a> {
        __: (__HooksImplNever, &'a ()),
    }
    impl<'hook, 'a> ::hooks::core::HookValue<'hook> for __HooksValueOfThisHook<'a> {
        type Value = ();
    }
    ::hooks::core::fn_hook::use_fn_hook::<
        __HooksValueOfThisHook<'a>,
        _,
        _,
    >(move |_: ::core::pin::Pin<&mut ::hooks::core::HookTuple<()>>| {})
}
