packages/hooks-test/tests/snapshots/generic_args__use_tuple_0_elided.snap
---
source: packages/hooks-test/tests/generic_args.rs
expression: "use_tuple_0_elided::hook_impl_code()"
---
fn use_tuple_0_elided(
    _: &(),
) -> impl ::hooks::core::UpdateHookUninitialized<
    Uninitialized = impl ::hooks::core::HookPollNextUpdate + ::hooks::core::HookUnmount + ::core::default::Default,
    Hook = impl ::hooks::core::Hook + for<'hook> ::hooks::core::HookValue<
        'hook,
        Value = (),
    >,
> {
    enum __HooksImplNever {}
    struct __HooksValueOfThisHook {
        __: (__HooksImplNever,),
    }
    impl<'hook> ::hooks::core::HookValue<'hook> for __HooksValueOfThisHook {
        type Value = ();
    }
    ::hooks::core::fn_hook::use_fn_hook::<
        __HooksValueOfThisHook,
        _,
        _,
    >(move |_: ::core::pin::Pin<&mut ::hooks::core::HookTuple<()>>| {})
}
